force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>