force-app/main/default/objects/Claim__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Work_Order__r.Street + BR() + Work_Order__r.City + &quot;, &quot; + Work_Order__r.State + &quot; &quot; + Work_Order__r.PostalCode + BR() + Work_Order__r.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>