force-app/main/default/objects/Claim__c/fields/DCC_Paid__c.field-meta.xml
<CustomField>
    <fullName>DCC_Paid__c</fullName>
    <label>DCC Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>