force-app/main/default/objects/Claim__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description of Issue</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>