force-app/main/default/objects/Claim__c/fields/IC_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>IC_Order_ID__c</fullName>
    <label>IC Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>