force-app/main/default/objects/Claim__c/fields/Installer__c.field-meta.xml
<CustomField>
    <fullName>Installer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Claims (Installer)</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>