force-app/main/default/objects/Claim__c/fields/Installer_Caused_Damage__c.field-meta.xml
<CustomField>
    <fullName>Installer_Caused_Damage__c</fullName>
    <label>Installer Caused Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>