force-app/main/default/objects/Claim__c/fields/Installer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Installer_Contact__c</fullName>
    <label>Installer Contact</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Call</fullName>
            </value>
            <value>
                <fullName>Follow-up Call</fullName>
            </value>
            <value>
                <fullName>Resolution Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>