force-app/main/default/objects/Claim__c/fields/Service_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_ID__c</fullName>
    <formula>Work_Order__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Order ID</label>
    <type>Text</type>
</CustomField>