force-app/main/default/objects/Claim__c/fields/Settlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Type__c</fullName>
    <label>Settlement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Claim</fullName>
            </value>
            <value>
                <fullName>Installer Paid</fullName>
            </value>
            <value>
                <fullName>DCC Paid</fullName>
            </value>
            <value>
                <fullName>50/50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>