force-app/main/default/objects/Claim__c/fields/SR__c.field-meta.xml
<CustomField>
    <fullName>SR__c</fullName>
    <label>SR#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>