force-app/main/default/objects/Claim__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Claim</fullName>
                <default>true</default>
                <label>New Claim</label>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>GL Claim Filed (Installer)</fullName>
            </value>
            <value>
                <fullName>Investigating - Insurance Action Required</fullName>
            </value>
            <value>
                <fullName>Investigating - Member Action Required</fullName>
            </value>
            <value>
                <fullName>Investigating - Company Action Required</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>