force-app/main/default/objects/Claim__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Damage Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>