force-app/main/default/objects/Claim__c/validationRules/Installer_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Installer_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Installer__c)</errorConditionFormula>
    <errorDisplayField>Installer__c</errorDisplayField>
    <errorMessage>Installer is required</errorMessage>
</ValidationRule>