force-app/main/default/objects/Claim__c/listViews/Dealer_0015f00000fn53JAAQ_Claim.listView-meta.xml
<ListView>
    <fullName>Dealer_0015f00000fn53JAAQ_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Dealer-0015f00000fn53JAAQ</label>
    <queue>Dealer_0015f00000fn53JAAQ</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>