force-app/main/default/objects/Claim__c/listViews/Dealer_0015f00000fnD7IAAU_Claim.listView-meta.xml
<ListView>
    <fullName>Dealer_0015f00000fnD7IAAU_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Dealer-0015f00000fnD7IAAU</label>
    <queue>Dealer_0015f00000fnD7IAAU</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>