force-app/main/default/objects/Claim__c/listViews/Dealer_001Qq00000W4FviIAF_Claim.listView-meta.xml
<ListView>
    <fullName>Dealer_001Qq00000W4FviIAF_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Dealer-001Qq00000W4FviIAF</label>
    <queue>Dealer_001Qq00000W4FviIAF</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>